--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,11 @@ dependencies:
   firebase_auth: ^4.18.0
   cloud_firestore:
   http: ^1.2.1
-
+  firebase_database: ^10.5.5
+  dotted_line: ^3.2.2
+  shared_preferences: ^2.2.3
+  printing: ^5.12.0
+  pdf: ^3.10.8
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -62,7 +66,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/barcode 1.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
