--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   shared_preferences: ^2.2.3
   printing: ^5.12.0
   pdf: ^3.10.8
+  get: ^4.6.6
+  image_picker: ^1.1.1
+  firebase_storage: ^11.7.7
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -66,7 +70,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/barcode 1.png
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
